[gd_scene load_steps=5 format=3 uid="uid://cm2hjo0hbid4s"]

[ext_resource type="Script" path="res://Scripts/ServerJoinTest.gd" id="1_ee4jk"]
[ext_resource type="PackedScene" uid="uid://c21jx54148kmv" path="res://Scenes/Hubs/city_hub.tscn" id="2_bbavi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gg5gf"]
albedo_color = Color(0, 0.384314, 0.160784, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qyvr7"]
albedo_color = Color(0.843137, 0.45098, 0, 1)

[node name="TestScene" type="Node3D"]
script = ExtResource("1_ee4jk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 379.0
offset_top = 237.0
offset_right = -379.0
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Room Code"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Sonic.tscn", "res://Scenes/ThrowRing.tscn", "res://Scenes/SonicMine.tscn", "res://Scenes/SonicWave.tscn")
spawn_path = NodePath("..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.628289, 0.77798, 0, -0.77798, 0.628289, 0, 1.25018, 3.33821)

[node name="test_map" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.9336, 0, 0)

[node name="ground" type="CSGBox3D" parent="test_map"]
transform = Transform3D(8, 0, 0, 0, 1, 0, 0, 0, 8, 0, -0.327083, 0)
use_collision = true
size = Vector3(1, 0.25, 1)
material = SubResource("StandardMaterial3D_gg5gf")

[node name="InvisibleWalls" type="Marker3D" parent="test_map"]

[node name="CSGBox3D2" type="CSGBox3D" parent="test_map/InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, -0.327083, 0)
visible = false
use_collision = true
size = Vector3(1, 10, 8)

[node name="CSGBox3D3" type="CSGBox3D" parent="test_map/InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, -0.327083, 0)
visible = false
use_collision = true
size = Vector3(1, 10, 8)

[node name="CSGBox3D4" type="CSGBox3D" parent="test_map/InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.327083, 4.5)
visible = false
use_collision = true
size = Vector3(8, 10, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="test_map/InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.327083, -4.5)
visible = false
use_collision = true
size = Vector3(8, 10, 1)

[node name="obstacles" type="Marker3D" parent="test_map"]

[node name="CSGBox3D6" type="CSGBox3D" parent="test_map/obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -0.327083, -2)
use_collision = true
material = SubResource("StandardMaterial3D_qyvr7")

[node name="CSGBox3D7" type="CSGBox3D" parent="test_map/obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -0.327083, 2)
use_collision = true
material = SubResource("StandardMaterial3D_qyvr7")

[node name="CSGBox3D8" type="CSGBox3D" parent="test_map/obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.327083, 2)
use_collision = true
material = SubResource("StandardMaterial3D_qyvr7")

[node name="CSGBox3D9" type="CSGBox3D" parent="test_map/obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.327083, -2)
use_collision = true
material = SubResource("StandardMaterial3D_qyvr7")

[node name="CSGBox3D10" type="CSGBox3D" parent="test_map/obstacles"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, -0.327083, -2)
use_collision = true
material = SubResource("StandardMaterial3D_qyvr7")

[node name="hub_test" parent="." instance=ExtResource("2_bbavi")]

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
